# TextAttack-Multilabel

./: .gitignore  LICENSE  MANIFEST.in  README.md  attack_results_toxic.parquet  install_env.py  pyproject.toml
example_toxic_adv_examples/: README.md  attack_multilabel_tae_main.py  attack_results_toxic.parquet  baseline_multiclass_toxic_adv_example_attack.py  download_data.py  run_end_to_end_demo.py  run_multilabel_tae_main.py  util_demo.py
example_toxic_adv_examples/config/: attack_config.yaml  toxic_adv_examples_config.yaml
examples/: getting_started.ipynb
scripts/: attack_multilabel.py  install_env.py
test/: __init__.py  run_tests.py  test_goal_function_core.py  test_model_wrapper.py  test_model_wrapper_advanced.py  test_multilabel_attack_recipes.py  test_shared.py
textattack_multilabel/: __init__.py  attack_components.py  goal_function.py  model.py  multiclass_target_attack.py  multilabel_model_wrapper.py  multilabel_target_attack.py  multilabel_target_attack_recipe.py  multilabel_transform_attack_recipe.py  shared.py
