[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textattack-multilabel"
version = "0.1.0"
description = "Multi-label adversarial attack extension for TextAttack"
authors = [
    {name = "QData Lab", email = "textattack@qdata.org"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "textattack>=0.3.0",
    "transformers>=4.10.0",
    "datasets>=2.0.0",
    "detoxify>=0.5.0",
    "sentence-transformers>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/QData/TextAttack-Multilabel"
Repository = "https://github.com/QData/TextAttack-Multilabel"
Documentation = "https://textattack-multilabel.readthedocs.io/"
Issue-Tracker = "https://github.com/QData/TextAttack-Multilabel/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["textattack_multilabel*"]

[project.scripts]
textattack-multilabel = "textattack_multilabel.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
